feat(install script): add dry/fake run and help options
Signed-off-by: Vedant K <gamemaker0042@gmail.com>

--- a/scripts/install
+++ b/scripts/install
@@ -6,8 +6,11 @@ set -e -o pipefail
 # 
 # Usage: scripts/install
 # Options:
-#     --reinstall    Download executables again
+#     -h       Show usage
+#     -f       Simply show what is going to happen
+#     -o       Download executables even if they exist
 #
+# NOTE: This install script is ONLY FOR LINUX/MACOS. Do NOT run this on Windows (it most probably won't work, not tested)
 
 # Steps:
 # - Create the $HOME/.local/opt/dabbu/cli directory
@@ -40,87 +43,133 @@ underline="\e[4"
 strikethrough="\e[9"
 normal="\e[0m"
 
-echo -e "${colour_cyan}${bold}  ____        _     _            ${normal}"
-echo -e "${colour_cyan}${bold} |  _ \  __ _| |__ | |__  _   _  ${normal}"
-echo -e "${colour_cyan}${bold} | | | |/ _\` | '_ \| '_ \| | | | ${normal}"
-echo -e "${colour_cyan}${bold} | |_| | (_| | |_) | |_) | |_| | ${normal}"
-echo -e "${colour_cyan}${bold} |____/ \__,_|_.__/|_.__/ \__,_| ${normal}"
-echo -e "${colour_cyan}${bold}                                 ${normal}"
+function help {
+	echo -e "${colour_cyan}${bold}install${normal}"
+	echo -e "${colour_blue}Installs the Dabbu CLI and Files API Server${normal}"
+	echo -e ""
+	echo -e "Usage: ${colour_cyan}./install${normal}"
+	echo -e ""
+	echo -e "${color_cyan}Options:${normal}"
+	echo -e "${color_blue}    -h       Show usage${normal}"
+	echo -e "${color_blue}    -f       Simply show what is going to happen${normal}"
+	echo -e "${color_blue}    -o       Download executables even if they exist${normal}"
+	echo -e ""
+	echo -e "${colour_red}NOTE: This install script is ONLY FOR LINUX/MACOS. Do NOT run this${normal}"
+	echo -e "${colour_red}on Windows (it most probably won't work, not tested)${normal}"
+	
+	exit
+}
 
-echo -e "${colour_blue}Installing dabbu to ${colour_cyan}$HOME/.local/opt/dabbu/cli/${colour_blue} (wrapper script at ${colour_cyan}/usr/bin/dabbu-cli${colour_blue})${normal}"
-echo -e "${colour_red}You might need to run this script with sudo${normal}"
+function fake_run {
+	echo -e "${colour_blue}${colour_cyan}Steps:${normal}"
+	echo -e "${colour_blue}- Create the folder ${colour_cyan}$HOME/.local/opt/dabbu/cli${normal}"
+	echo -e "${colour_blue}- Create the folder ${colour_cyan}$HOME/.local/opt/dabbu/files-api-server${normal}"
+	echo -e "${colour_blue}- Download the latest CLI and Files API Server executables to the respective folders${normal}"
+	echo -e "${colour_blue}- Download the wrapper shell script and save it as ${colour_cyan}/usr/bin/dabbu-cli${normal}"
+	echo -e ""
+	echo -e "${colour_blue}To view the source code, go \e]8;;https://github.com/dabbu-knowledge-platform/cli/blob/main/scripts/install\ahere\e]8;;\a (https://github.com/dabbu-knowledge-platform/cli/blob/main/scripts/install).${normal}"
+	
+	exit
+}
 
-echo -e "${colour_blue}Checking environment...${normal}"
+function install {
+	echo -e "${colour_blue}Installing dabbu to ${colour_cyan}$HOME/.local/opt/dabbu/cli/${colour_blue} (wrapper script at ${colour_cyan}/usr/bin/dabbu-cli${colour_blue})${normal}"
+	echo -e "${colour_red}You might need to run this script with sudo${normal}"
 
-machine="$(uname -s)"
-case "$machine" in
-    Linux*)  machine="linux";;
-    Darwin*) machine="macos";;
-    *)       machine="unknown";;
-esac
+	echo -e "${colour_blue}Checking environment...${normal}"
 
-if [ $machine == "unknown" ]; then
-    echo -e "${colour_red}This install script is meant only for Linux/MacOS${normal}"
-    exit 1
-fi
+	machine="$(uname -s)"
+	case "$machine" in
+			Linux*)  machine="linux";;
+			Darwin*) machine="macos";;
+			*)       machine="unknown";;
+	esac
 
-echo -e "${colour_blue}Creating install directory at ${colour_cyan}$HOME/.local/opt/dabbu/cli/${colour_blue}...${normal}"
-mkdir -p "$HOME/.local/opt/dabbu/cli"
-mkdir -p "$HOME/.local/opt/dabbu/files-api-server"
+	if [ $machine == "unknown" ]; then
+		echo -e "${colour_red}This install script is meant only for Linux/MacOS${normal}"
+			exit 1
+	fi
 
-echo -e "${colour_blue}Downloading executable to ${colour_cyan}$HOME/.local/opt/dabbu/cli/${colour_blue}...${normal}"
+	echo -e "${colour_blue}Creating install directory at ${colour_cyan}$HOME/.local/opt/dabbu/cli/${colour_blue}...${normal}"
+	mkdir -p "$HOME/.local/opt/dabbu/cli"
+	mkdir -p "$HOME/.local/opt/dabbu/files-api-server"
 
-if [ -f "$HOME/.local/opt/dabbu/cli/dabbu-cli-executable" ] || [ $1 == "--reinstall" ]; then
-    echo -e "${color_cyan}Executable already downloaded${normal}"
-    chmod 755 "$HOME/.local/opt/dabbu/cli/dabbu-cli-executable"
-else
-    curl -L "https://github.com/dabbu-knowledge-platform/cli/releases/latest/download/dabbu-cli-$machine" --output "$HOME/.local/opt/dabbu/cli/dabbu-cli-executable" --progress-bar
-    chmod 755 "$HOME/.local/opt/dabbu/cli/dabbu-cli-executable"
-fi
+	echo -e "${colour_blue}Downloading executable to ${colour_cyan}$HOME/.local/opt/dabbu/cli/${colour_blue}...${normal}"
 
-if [ -f "$HOME/.local/opt/dabbu/files-api-server/files-api-server-executable" ] || [ $1 == "--reinstall" ]; then
-    echo -e "${color_cyan}Executable already downloaded${normal}"
-    chmod 755 "$HOME/.local/opt/dabbu/files-api-server/files-api-server-executable"
-else
-    curl -L "https://github.com/dabbu-knowledge-platform/files-api-server/releases/latest/download/files-api-server-$machine" --output "$HOME/.local/opt/dabbu/files-api-server/files-api-server-executable" --progress-bar
-    chmod 755 "$HOME/.local/opt/dabbu/files-api-server/files-api-server-executable"
-fi
+	if [ -f "$HOME/.local/opt/dabbu/cli/dabbu-cli-executable" ] || [ $1 == "--overwrite" ]; then
+		echo -e "${color_cyan}Executable already downloaded${normal}"
+		chmod 755 "$HOME/.local/opt/dabbu/cli/dabbu-cli-executable"
+	else
+		curl -L "https://github.com/dabbu-knowledge-platform/cli/releases/latest/download/dabbu-cli-$machine" --output "$HOME/.local/opt/dabbu/cli/dabbu-cli-executable" --progress-bar
+		chmod 755 "$HOME/.local/opt/dabbu/cli/dabbu-cli-executable"
+	fi
 
-curl -L "https://raw.githubusercontent.com/dabbu-knowledge-platform/cli/main/scripts/wrapper" --output "$HOME/.local/opt/dabbu/cli/wrapper" --progress-bar
+	if [ -f "$HOME/.local/opt/dabbu/files-api-server/files-api-server-executable" ] || [ $1 == "--overwrite" ]; then
+		echo -e "${color_cyan}Executable already downloaded${normal}"
+		chmod 755 "$HOME/.local/opt/dabbu/files-api-server/files-api-server-executable"
+	else
+		curl -L "https://github.com/dabbu-knowledge-platform/files-api-server/releases/latest/download/files-api-server-$machine" --output "$HOME/.local/opt/dabbu/files-api-server/files-api-server-executable" --progress-bar
+		chmod 755 "$HOME/.local/opt/dabbu/files-api-server/files-api-server-executable"
+	fi
 
-echo -e "${colour_blue}Installing CLI (you may need to enter your root password)${normal}..."
+	curl -L "https://raw.githubusercontent.com/dabbu-knowledge-platform/cli/main/scripts/wrapper" --output "$HOME/.local/opt/dabbu/cli/wrapper" --progress-bar
 
-sudo cp "$HOME/.local/opt/dabbu/cli/wrapper" "/usr/bin/dabbu-cli"
-sudo chmod 777 "/usr/bin/dabbu-cli"
+	echo -e "${colour_blue}Installing CLI (you may need to enter your root password)...${normal}"
 
-echo -e "${colour_blue}Setting up CLI...${normal}"
+	sudo cp "$HOME/.local/opt/dabbu/cli/wrapper" "/usr/bin/dabbu-cli"
+	sudo chmod 777 "/usr/bin/dabbu-cli"
 
-if [ $machine == "macos" ]; then
-    macos_config_path="~/Library/Preferences/dabbu-cli-nodejs/"
-    
-    mkdir -p "$macos_config_path"
-    
-    if [ -f "$macos_config_path/config.json" ]; then
-        mv "$macos_config_path/config.json" "$macos_config_path/config.json.bak"
-    fi
+	echo -e "${colour_blue}Setting up CLI...${normal}"
 
-    touch "$macos_config_path/config.json"
-    echo "{\"server\": \"http://localhost:8080\"}" >> "$macos_config_path/config.json"
-fi
+	if [ $machine == "macos" ]; then
+		macos_config_path="~/Library/Preferences/dabbu-cli-nodejs/"
 
-if [ $machine == "linux" ]; then
-    linux_config_path="$XDG_CONFIG_HOME/dabbu-cli-nodejs/"
-    if [ -z "$XDG_CONFIG_HOME" ]; then
-        linux_config_path="$HOME/.config/dabbu-cli-nodejs"
-    fi
+		mkdir -p "$macos_config_path"
 
-    mkdir -p "$linux_config_path"
+		if [ -f "$macos_config_path/config.json" ]; then
+			mv "$macos_config_path/config.json" "$macos_config_path/config.json.bak"
+		fi
 
-    if [ -f "$linux_config_path/config.json" ]; then
-        mv "$linux_config_path/config.json" "$linux_config_path/config.json.bak"
-    fi
+		touch "$macos_config_path/config.json"
+		echo "{\"server\": \"http://localhost:8080\"}" >> "$macos_config_path/config.json"
+	fi
 
-    echo "{\"server\": \"http://localhost:8080\"}" >> "$linux_config_path/config.json"
-fi
+	if [ $machine == "linux" ]; then
+		linux_config_path="$XDG_CONFIG_HOME/dabbu-cli-nodejs/"
+		if [ -z "$XDG_CONFIG_HOME" ]; then
+			linux_config_path="$HOME/.config/dabbu-cli-nodejs"
+		fi
 
-echo -e "${colour_green}${bold}Successfully installed Dabbu CLI! Type dabbu-cli to run it.${normal}"
+		mkdir -p "$linux_config_path"
+
+		if [ -f "$linux_config_path/config.json" ]; then
+			mv "$linux_config_path/config.json" "$linux_config_path/config.json.bak"
+		fi
+
+		echo "{\"server\": \"http://localhost:8080\"}" >> "$linux_config_path/config.json"
+	fi
+
+	echo -e "${colour_green}${bold}Successfully installed Dabbu CLI! Type dabbu-cli to run it.${normal}"
+
+	exit
+}
+
+function main {
+	echo -e "${colour_cyan}${bold}  ____        _     _            ${normal}"
+	echo -e "${colour_cyan}${bold} |  _ \  __ _| |__ | |__  _   _  ${normal}"
+	echo -e "${colour_cyan}${bold} | | | |/ _\` | '_ \| '_ \| | | | ${normal}"
+	echo -e "${colour_cyan}${bold} | |_| | (_| | |_) | |_) | |_| | ${normal}"
+	echo -e "${colour_cyan}${bold} |____/ \__,_|_.__/|_.__/ \__,_| ${normal}"
+	echo -e "${colour_cyan}${bold}                                 ${normal}"
+
+	while getopts "hfr" opt; do
+		case $opt in
+			h) help;;
+			f) fake_run;;
+			o) install --overwrite;;
+			*) install;;
+			esac
+	done
+}
+
+main "$*"
