fix(install script): script doesn't execute
Signed-off-by: Vedant K <gamemaker0042@gmail.com>

--- a/scripts/install
+++ b/scripts/install
@@ -167,9 +167,10 @@ function main {
 			h) help;;
 			f) fake_run;;
 			o) install --overwrite;;
-			*) install;;
 			esac
 	done
+
+	install
 }
 
 main "$*"
